[package]
name = "scheduling-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/scheduling-rs"
description = "Scheduling algorithms in Rust — job scheduling, flow shop, branch and bound, priority rules, fleet scheduling"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"

[dev-dependencies]
serde_json = "1"
